# py_pidx

./: LICENSE  README.md
docs/: api.rst  conf.py  development.rst  examples.rst  index.rst  introduction.rst  usage.rst
examples/: thermal_system.ipynb
install/: build_wheel.sh  install_for_developement.sh  publish.sh  rebuild_docs.sh  run_docs_local.sh  uninstall_for_developement.sh
sw/: .gitignore  pyproject.toml  setup.py
sw/py_pidx/: __init__.py  controller.py  gain_scheduler.py
sw/test/: test_pid.py
