[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_pidx"
version = "1.1.0"
description = "py_pidx: A Python package for PID control."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Mehrab Mahdian", email="memahdian@outlook.com" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mehrabmahdian/py_pidx"
